--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "csv-parse": "^5.5.6",
     "express": "^4.21.1"
   }
 }
